--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Shudong Sun
 subtitle: 
 welcome_message: <a href="https://shusunny.github.io/sunnyblog" target="_blank">Computer Science M.S. Student of USC </a>
-description: I am focused on application of Data Science.
+description: I am interested in the application of Data Science.
 creator: <a href="http://shusunny.github.io">@sunny</a>
 
 url: "https://shusunny.github.io"
