--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: Shudong Sun
 subtitle: 
-welcome_message: <a href="https://shusunny.github.io/sunnyblog" target="_blank">Computer Science M.S. Student of USC </a>
+welcome_message: <a>Computer Science M.S. Student of USC </a>
 description: I am interested in the application of Data Science.
 creator: <a href="http://shusunny.github.io">@sunny</a>
 
