--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ comment:
 # Social
 social:
     github: shusunny
-   # gplus: 107108267983477358170
-    mail: sunzhen1135@gmail.com
+    gplus: 107108267983477358170
+    mail: shudongs@usc.com
 
 # Google Analytics
 ga:
