--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,9 @@ comment:
     
 # Social
 social:
-    github: shusunny
-    gplus: 107108267983477358170
+    github: shudongsun
+    linkedin: shudongsun
+    # gplus: 107108267983477358170
     mail: shudongs@usc.com
 
 # Google Analytics
