--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: Shudong Sun
 subtitle: 
-welcome_message: <a>Statistics and Data Science Ph.D. Student of UA </a>
+welcome_message: <a>Statistics and Data Science Ph.D. Student of The University of Arizona </a>
 description: I am interested in the application of Data Science.
 creator: <a href="http://shudongsun.github.io">@sunny</a>
 
